Update README.md
Added Installation instructions for JavaFx on windows and Mac